# raspberry-pico

./: .gitignore  README.md
assembly/adc_basic/src/: adc.S  foo.S  led.S  main.c
assembly/gpio_blinky/: platformio.ini
assembly/gpio_blinky/src/: assembly.S  delay.S  led.S  main.c
docs/: README.md
micropython-examples/mfrc522-rfid/: README.md  mfrc522.py
micropython-examples/mfrc522-rfid/reading_tags/: main.py
myproject/: CMakeLists.txt  README.md  main.c
myproject/libs/: README.md  template.c
myproject/libs/inc/: README.md  template.h
pico-examples/: README.md
pico-examples/adc/adc_console/: CMakeLists.txt
pico-examples/adc/dma_capture/: CMakeLists.txt
pico-examples/adc/hello_adc/: CMakeLists.txt
pico-examples/adc/joystick_display/: CMakeLists.txt
pico-examples/adc/microphone_adc/: CMakeLists.txt
pico-examples/baremetal/gpio_blinky/: CMakeLists.txt  main.c
pico-examples/blink/: CMakeLists.txt
pico-examples/clocks/detached_clk_peri/: CMakeLists.txt
pico-examples/clocks/hello_48MHz/: CMakeLists.txt
pico-examples/clocks/hello_gpout/: CMakeLists.txt
pico-examples/clocks/hello_resus/: CMakeLists.txt
pico-examples/divider/: CMakeLists.txt
pico-examples/dma/channel_irq/: CMakeLists.txt
pico-examples/dma/control_blocks/: CMakeLists.txt
pico-examples/dma/hello_dma/: CMakeLists.txt
pico-examples/flash/cache_perfctr/: CMakeLists.txt
pico-examples/flash/nuke/: CMakeLists.txt
pico-examples/flash/program/: CMakeLists.txt
pico-examples/flash/ssi_dma/: CMakeLists.txt
pico-examples/flash/xip_stream/: CMakeLists.txt
pico-examples/freertos/blinky/: CMakeLists.txt  main.c
pico-examples/freertos/temperature_sensor/: CMakeLists.txt  main.c
pico-examples/gpio/dht_sensor/: CMakeLists.txt
pico-examples/gpio/hello_7segment/: CMakeLists.txt
pico-examples/gpio/hello_gpio_irq/: CMakeLists.txt
pico-examples/hello_world/serial/: CMakeLists.txt
pico-examples/hello_world/usb/: CMakeLists.txt
pico-examples/i2c/bmp280_i2c/: CMakeLists.txt
pico-examples/i2c/bus_scan/: CMakeLists.txt
pico-examples/i2c/lcd_1602_i2c/: CMakeLists.txt
pico-examples/i2c/lis3dh_i2c/: CMakeLists.txt
pico-examples/i2c/mcp9808_i2c/: CMakeLists.txt
pico-examples/i2c/mma8451_i2c/: CMakeLists.txt
pico-examples/i2c/mpl3115a2_i2c/: CMakeLists.txt
pico-examples/i2c/mpu6050_i2c/: CMakeLists.txt
pico-examples/i2c/oled_i2c/: CMakeLists.txt
pico-examples/i2c/pa1010d_i2c/: CMakeLists.txt
pico-examples/i2c/pcf8523_i2c/: CMakeLists.txt
pico-examples/interp/hello_interp/: CMakeLists.txt
pico-examples/multicore/adc_multicore/: CMakeLists.txt  main.c
pico-examples/multicore/hello_multicore/: CMakeLists.txt
pico-examples/multicore/multicore_fifo_irqs/: CMakeLists.txt
pico-examples/multicore/multicore_runner/: CMakeLists.txt
pico-examples/multicore/multicore_runner_queue/: CMakeLists.txt
pico-examples/picoboard/blinky/: CMakeLists.txt
pico-examples/picoboard/button/: CMakeLists.txt
pico-examples/pio/addition/: CMakeLists.txt
pico-examples/pio/apa102/: CMakeLists.txt
pico-examples/pio/clocked_input/: CMakeLists.txt
pico-examples/pio/differential_manchester/: CMakeLists.txt
pico-examples/pio/hello_pio/: CMakeLists.txt
pico-examples/pio/hub75/: CMakeLists.txt
pico-examples/pio/i2c/: CMakeLists.txt
pico-examples/pio/ir_nec/ir_loopback/: CMakeLists.txt
pico-examples/pio/ir_nec/nec_receive_library/: CMakeLists.txt
pico-examples/pio/ir_nec/nec_transmit_library/: CMakeLists.txt
pico-examples/pio/logic_analyser/: CMakeLists.txt
pico-examples/pio/manchester_encoding/: CMakeLists.txt
pico-examples/pio/pio_blink/: CMakeLists.txt
pico-examples/pio/pwm/: CMakeLists.txt
pico-examples/pio/quadrature_encoder/: CMakeLists.txt
pico-examples/pio/spi/: CMakeLists.txt
pico-examples/pio/squarewave/: CMakeLists.txt
pico-examples/pio/st7789_lcd/: CMakeLists.txt
pico-examples/pio/uart_rx/: CMakeLists.txt
pico-examples/pio/uart_tx/: CMakeLists.txt
pico-examples/pio/ws2812/: CMakeLists.txt
pico-examples/pwm/hello_pwm/: CMakeLists.txt
pico-examples/pwm/led_fade/: CMakeLists.txt
pico-examples/pwm/led_fade_no_irq/: pwm_led_fade.c
pico-examples/pwm/measure_duty_cycle/: CMakeLists.txt
pico-examples/pwm/servo/: CMakeLists.txt  main.c
pico-examples/reset/hello_reset/: CMakeLists.txt
pico-examples/rtc/hello_rtc/: CMakeLists.txt
pico-examples/rtc/rtc_alarm/: CMakeLists.txt
pico-examples/rtc/rtc_alarm_repeat/: CMakeLists.txt
pico-examples/spi/bme280_spi/: CMakeLists.txt
pico-examples/spi/mfrc522/: CMakeLists.txt  main.c
pico-examples/spi/mfrc522/lib/: mfrc522.c
pico-examples/spi/mfrc522/lib/inc/: mfrc522.h  mfrc522_cmd.h  mfrc522_reg.h
pico-examples/spi/mpu9250_spi/: CMakeLists.txt
pico-examples/spi/spi_dma/: CMakeLists.txt
pico-examples/spi/spi_flash/: CMakeLists.txt
pico-examples/system/hello_double_tap/: CMakeLists.txt
pico-examples/system/narrow_io_write/: CMakeLists.txt
pico-examples/system/unique_board_id/: CMakeLists.txt
pico-examples/timer/hello_timer/: CMakeLists.txt
pico-examples/timer/periodic_sampler/: CMakeLists.txt
pico-examples/timer/timer_lowlevel/: CMakeLists.txt
pico-examples/uart/hello_uart/: CMakeLists.txt
pico-examples/uart/lcd_uart/: CMakeLists.txt
pico-examples/uart/uart_advanced/: CMakeLists.txt
pico-examples/usb/device/dev_hid_composite/: CMakeLists.txt
pico-examples/usb/device/dev_lowlevel/: CMakeLists.txt
pico-examples/usb/host/host_cdc_msc_hid/: CMakeLists.txt
pico-examples/watchdog/hello_watchdog/: CMakeLists.txt
pico-freertos/: CMakeLists.txt  main.c
pico-impa/: _autosave-pico-impa.kicad_prl  _autosave-pico-impa.kicad_pro  pico-impa.kicad_pcb  pico-impa.kicad_prl  pico-impa.kicad_pro  pico-impa.kicad_sch  pico-impa.kicad_sch-bak  pico-impa.net
pico-impa/ESP Libraries/: ESP-01.kicad_mod
pico-impa/OLED Library/SSD1306.pretty/: 128x64OLED.kicad_mod
platformio/gpio_blinky/src/: main.c
platformio/i2c_lcd1602/lib/lcd_i2c/src/: lcd_i2c.c  lcd_i2c.h
platformio/i2c_lcd1602/src/: main.c
uf2_files/: README.md
